<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">WELCOME,</string>
    <string name="header">Header</string>
    <string name="click_to_sign_in">Already have an account? LOG IN</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
</resources>