<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:tint="@color/teal_200">

    <item android:id="@+id/home"
        android:title="@string/home"
        android:iconTint="#003782"
        android:icon="@mipmap/home_foreground"></item>
    <item android:id="@+id/calendar"
        android:title="@string/calendar"
        android:icon="@mipmap/calendar_foreground"></item>
    <item android:id="@+id/friends"
        android:title="@string/friends"
        android:icon="@mipmap/friends_foreground"></item>
    <item android:id="@+id/messages"
        android:title="@string/messages"
        android:icon="@mipmap/messages_foreground"></item>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@mipmap/profile_foreground"/>

</menu>